# hf9

./: .dockerignore  .gitignore  Dockerfile  README.md  blacklist-redesign-plan.md  cloudbuild.yaml  conftest.py  docker-compose.yml  evidence-polium-plan.md  litestream.yml  main.py  manage.py  migrate.sh  phase-0-todo.md  phase-1-plan.md  phase-10-plan.md  phase-11-plan.md  phase-12-plan.md  phase-13-plan.md  phase-14-plan.md  phase-15-plan.md  phase-16-plan.md  phase-2-plan.md  phase-3-plan.md  phase-4-plan.md  phase-5-plan.md  phase-6-plan.md  phase-7-plan.md  phase-8-plan.md  phase-9-plan.md  plan.md  player-identity-plan.md  pyproject.toml  signup-plan.md  sqlite-litestream-plan.md  start.sh  survey-points-plan.md  terraform-plan.md  uvicorn-plan.md
accounts/: adapters.py  admin.py  email_verification.py  magic.py  models.py  passkey.py  ratelimit.py  signals.py  task_views.py  tests.py  urls.py  utils.py  views.py
core/: maturity.py  models.py  sse.py  tasks.py  tests.py
evidence/: admin.py  models.py  service.py  tests.py
hf/: asgi.py  task_urls.py  urls.py  views.py  wsgi.py
lifecycle/: apps.py  models.py  task_views.py  tests.py
points/: admin.py  models.py  service.py  tests.py
polium/: admin.py  apps.py  models.py  task_views.py  tests.py  urls.py  views.py
spendium/: admin.py  apps.py  models.py  urls.py  views.py
surveys/: admin.py  models.py  ratings.py  service.py  tests.py
templates/: about.html  base.html  landing.html
terraform/: apis.tf  artifact_registry.tf  backend.tf  cloud_build.tf  cloud_run.tf  cloud_scheduler.tf  cloud_tasks.tf  iam.tf  load_balancer.tf  outputs.tf  (+4 more)
(+32 files in other folders)
