[project]
name = "hf9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "daphne>=4.2.1",
    "datastar-py>=1.0.0",
    "django>=6.0.5",
    "django-allauth[socialaccount]>=65.17.0",
    "django-anymail>=15.0",
    "django-sesame>=3.2.3",
    "django-storages[google]>=1.14.6",
    "google-cloud-tasks>=2.22.0",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "python-decouple>=3.8",
    "redis>=7.4.0",
    "sqids>=0.5.2",
    "webauthn>=2.7.1",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "coverage>=7.14.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "hf.settings.dev"
python_files = ["tests.py", "test_*.py"]
addopts = "--reuse-db"
